fix(authwebhook): prevent identity forgery in RAR decisions (SOC 2 CC8.1/CC6.8)
SECURITY FIX: Implement OLD object comparison for true idempotency to prevent
users from forging DecidedBy identity in RemediationApprovalRequest CRDs.

Root Cause:
- Webhook checked NEW object only (rar.Status.DecidedBy != "")
- Allowed users to pre-set DecidedBy field with forged identity
- Webhook preserved forged value (incorrect idempotency check)
- Violated SOC 2 CC8.1 (User Attribution) and CC6.8 (Non-Repudiation)

Security Fix:
- Decode OLD object to determine if decision is truly new
- Compare OLD vs NEW: OLD has decision → true idempotency (preserve)
- Compare OLD vs NEW: OLD has NO decision → NEW decision (OVERWRITE)
- ALWAYS enforce authenticated identity from admission request
- Log security events when user-provided DecidedBy is detected

Test Results:
- AuthWebhook Integration: 12/12 passing (100%) ✅
- AuthWebhook Unit: 32/32 passing (100%) ✅
- INT-RAR-04 (Identity Forgery Prevention): FIXED ✅

Additional Fixes:
- Fix #1: Resource naming (strings.ToLower for RFC 1123 compliance)
- Fix #2: Enhanced webhook logging (ctrl.Log structured logging)
- Fix #3: Certwatcher bypass (static TLS cert via TLSOpts)

Files Modified:
- pkg/authwebhook/remediationapprovalrequest_handler.go (+45/-10)
  * Added OLD object decoding for security validation
  * Implemented OLD vs NEW decision comparison (true idempotency)
  * Added security logging for forgery detection
  * Enforced tamper-proof attribution (ALWAYS use authenticated user)

- test/integration/authwebhook/suite_test.go (+23/-10)
  * Implemented certwatcher bypass (parallel test stability)

- test/integration/authwebhook/remediationapprovalrequest_test.go (+2/-1)
  * Fixed resource naming (lowercase conversion)

- test/unit/authwebhook/remediationapprovalrequest_audit_test.go (+41/-0)
  * Updated UNIT-RAR-AUDIT-AW-004 to provide OLD object for true idempotency test

Documentation:
- docs/handoff/AUTHWEBHOOK_INT_COMPLETE_RCA_FEB_03_

--- a/holmesgpt-api/requirements-e2e.txt
+++ b/holmesgpt-api/requirements-e2e.txt
@@ -30,8 +30,9 @@ httpx<0.28,>=0.24   # Supabase stack requires <0.28
 urllib3>=1.26.0,<2.0.0  # Required for prometrix compatibility
 
 # HolmesGPT SDK (from local copy) - Install AFTER supabase constraint
-# Using local copy from ../dependencies/holmesgpt/ for faster installation
-../dependencies/holmesgpt/
+# Using local copy from ./dependencies/holmesgpt/ for faster installation
+# NOTE: Build context is project root, dependencies copied to /opt/app-root/src/dependencies
+./dependencies/holmesgpt/
 
 # DataStorage OpenAPI Client (SOC2 audit events) - Required for audit emission
 # NOTE: Installed explicitly in Dockerfile before requirements.txt
