--- a/holmesgpt-api/Dockerfile.e2e
+++ b/holmesgpt-api/Dockerfile.e2e
@@ -22,15 +22,15 @@ USER 1001
 WORKDIR /opt/app-root/src
 
 # Copy HolmesGPT SDK dependencies (referenced in requirements-e2e.txt)
-# NOTE: No trailing slash on source - copies directory itself, not just contents
-COPY --chown=1001:0 dependencies ../dependencies
+# NOTE: Build context is project root, so use relative paths from root
+COPY --chown=1001:0 ./dependencies ./dependencies
 
 # Copy DataStorage OpenAPI client (referenced in requirements-e2e.txt)
 # Destination must match path in requirements: src/clients/datastorage/
-COPY --chown=1001:0 holmesgpt-api/src/clients/datastorage ./src/clients/datastorage
+COPY --chown=1001:0 ./holmesgpt-api/src/clients/datastorage ./src/clients/datastorage
 
 # Copy E2E requirements (minimal - no google-cloud-aiplatform 1.5GB)
-COPY --chown=1001:0 holmesgpt-api/requirements-e2e.txt ./requirements.txt
+COPY --chown=1001:0 ./holmesgpt-api/requirements-e2e.txt ./requirements.txt
 
 # Upgrade pip and install Python dependencies
 # Remove unnecessary files after installation to reduce layer size
@@ -58,10 +58,10 @@ WORKDIR /opt/app-root/src
 COPY --from=builder /opt/app-root/lib/python3.12/site-packages /opt/app-root/lib/python3.12/site-packages
 COPY --from=builder /opt/app-root/bin /opt/app-root/bin
 
-# Copy application code
-COPY --chown=1001:0 holmesgpt-api/src/ ./src/
-COPY --chown=1001:0 holmesgpt-api/requirements-e2e.txt ./requirements.txt
-COPY --chown=1001:0 holmesgpt-api/entrypoint.sh ./
+# Copy application code (build context is project root)
+COPY --chown=1001:0 ./holmesgpt-api/src/ ./src/
+COPY --chown=1001:0 ./holmesgpt-api/requirements-e2e.txt ./requirements.txt
+COPY --chown=1001:0 ./holmesgpt-api/entrypoint.sh ./
 
 # Create necessary directories with correct permissions and clean up
 RUN mkdir -p /tmp /opt/app-root/.cache && \
