fix(helm): define resource requests/limits for AIAnalysis, RO, and HAPI
Three components had empty resource definitions (BestEffort QoS),
making them vulnerable to eviction under memory pressure and allowing
unbounded resource consumption. Set sensible defaults based on workload
profiles: Go controllers (AIAnalysis, RemediationOrchestrator) match
the SignalProcessing pattern (100m/128Mi → 500m/256Mi), and HAPI gets
a higher allocation (200m/256Mi → 1000m/1Gi) for Python runtime and
LLM prompt construction overhead.

Made-with: Cursor

--- a/charts/kubernaut/values.yaml
+++ b/charts/kubernaut/values.yaml
@@ -42,8 +42,12 @@ aianalysis:
   rego:
     confidenceThreshold: null  # nil = use Rego default (0.8 per BR-AI-076)
   resources:
-    requests: {}
-    limits: {}
+    requests:
+      cpu: 100m
+      memory: 128Mi
+    limits:
+      cpu: 500m
+      memory: 256Mi
 
 # -- SignalProcessing controller
 signalprocessing:
@@ -58,8 +62,12 @@ signalprocessing:
 # -- RemediationOrchestrator controller
 remediationorchestrator:
   resources:
-    requests: {}
-    limits: {}
+    requests:
+      cpu: 100m
+      memory: 128Mi
+    limits:
+      cpu: 500m
+      memory: 256Mi
 
 # -- WorkflowExecution controller
 workflowexecution:
@@ -102,8 +110,12 @@ effectivenessmonitor:
 holmesgptApi:
   replicas: 1
   resources:
-    requests: {}
-    limits: {}
+    requests:
+      cpu: 200m
+      memory: 256Mi
+    limits:
+      cpu: 1000m
+      memory: 1Gi
   service:
     type: ClusterIP
     nodePort: null
